master-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
      - name: nginx
        image: raxer/pesbuk
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  #type: LoadBalancer
  ports:
    - port: 80
      #nodePort: 30080
  selector:
    name: nginx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pesbuk.rafifauz.site
    http:
      paths:
      #- path: /belajar
      - backend:
          serviceName: nginx
          servicePort: 80
